[gd_scene load_steps=2 format=3 uid="uid://ced4qf4g8nk4i"]

[ext_resource type="Script" path="res://Stages/UI/tech_tree/tech_node_card.gd" id="1_card"]

[node name="TechNodeCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 100)
script = ExtResource("1_card")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tech Name"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12

[node name="StateLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ðŸ”’ Locked"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
